--- a/site/src/examples/js/only_countries.js.ejs
+++ b/site/src/examples/js/only_countries.js.ejs
@@ -4,5 +4,5 @@ window.intlTelInput(input, {
   "ee", "fo", "fi", "fr", "de", "gi", "gr", "va", "hu", "is", "ie", "it", "lv",
   "li", "lt", "lu", "mk", "mt", "md", "mc", "me", "nl", "no", "pl", "pt", "ro",
   "ru", "sm", "rs", "sk", "si", "es", "se", "ch", "ua", "gb"],
-  loadUtils: () => import("/intl-tel-input/js/utils.js?<%= time %>") // for formatting/placeholders etc
+  loadUtils: () => import("/intl-tel-input/js/utils.js?<%= cacheBust('/intl-tel-input/js/utils.js') %>") // for formatting/placeholders etc
 });
