--- a/site/src/shared/iti_script.html.ejs
+++ b/site/src/shared/iti_script.html.ejs
@@ -1,1 +1,1 @@
-<script src="/intl-tel-input/js/intlTelInput.js?<%= time %>"></script>
+<script src="/intl-tel-input/js/intlTelInput.js?<%= cacheBust('/intl-tel-input/js/intlTelInput.js') %>"></script>
