--- a/site/src/docs/docs_page_template.html.ejs
+++ b/site/src/docs/docs_page_template.html.ejs
@@ -7,9 +7,9 @@
     <meta name="description" content="<%= meta_desc %>">
 
     <%= bootstrap_styles %>
-    <link rel="stylesheet" href="/css/website.css?<%= time %>" />
+    <link rel="stylesheet" href="/css/website.css?<%= cacheBust('/css/website.css') %>" />
     <link rel="stylesheet" href="/css/prism.css">
-    <link rel="stylesheet" href="/css/prism-overrides.css?<%= time %>">
+    <link rel="stylesheet" href="/css/prism-overrides.css?<%= cacheBust('/css/prism-overrides.css') %>">
 
     <%= analytics %>
   </head>
