--- a/site/src/examples/js/react_component_display_code.js.ejs
+++ b/site/src/examples/js/react_component_display_code.js.ejs
@@ -8,6 +8,6 @@ import IntlTelInput from 'intl-tel-input/react';
   // any initialisation options from the readme will work here
   initOptions={{
     initialCountry: "us",
-    loadUtils: () => import("/intl-tel-input/js/utils.js?<%= time %>"),
+    loadUtils: () => import("/intl-tel-input/js/utils.js?<%= cacheBust('/intl-tel-input/js/utils.js') %>"),
   }}
 />
