--- a/site/src/examples/js/simple_init_plugin.js.ejs
+++ b/site/src/examples/js/simple_init_plugin.js.ejs
@@ -1,5 +1,5 @@
 const input = document.querySelector("#phone");
 window.intlTelInput(input, {
   initialCountry: "us",
-  loadUtils: () => import("/intl-tel-input/js/utils.js?<%= time %>") // for formatting/placeholders etc
+  loadUtils: () => import("/intl-tel-input/js/utils.js?<%= cacheBust('/intl-tel-input/js/utils.js') %>") // for formatting/placeholders etc
 });
