--- a/site/src/examples/css/large_flags.css
+++ b/site/src/examples/css/large_flags.css
@@ -18,3 +18,6 @@ input.iti__search-input {
   padding-left: 45px;
   padding-right: 45px;
 }
+.iti--inline-dropdown .iti__country-list {
+  max-height: 210px;
+}
