--- a/site/src/docs/docs_content_template.html.ejs
+++ b/site/src/docs/docs_content_template.html.ejs
@@ -1,3 +1,9 @@
+<nav class="iti-breadcrumb" aria-label="Breadcrumb">
+  <ol class="iti-breadcrumb__list">
+    <li class="iti-breadcrumb__item" aria-current="page">Docs »</li>
+  </ol>
+</nav>
+
 <div class="iti-docs">
   <%= html %>
 </div>
