--- a/site/src/examples/examples_content_template.html.ejs
+++ b/site/src/examples/examples_content_template.html.ejs
@@ -1,3 +1,9 @@
+<nav class="iti-breadcrumb" aria-label="Breadcrumb">
+  <ol class="iti-breadcrumb__list">
+    <li class="iti-breadcrumb__item" aria-current="page">Examples »</li>
+  </ol>
+</nav>
+
 <h1><%= content_title %></h1>
 
 <div class="section">
