--- a/site/src/css/website.css
+++ b/site/src/css/website.css
@@ -204,7 +204,7 @@ h1 {
   height: 100%;
   opacity: 0;
   position: absolute;
-  left: -20px;
+  left: -24px;
   padding-right: 8px; /* ensure no hover gap between title and anchor */
   text-decoration: none;
   display: inline-flex;
@@ -216,6 +216,8 @@ h1 {
 }
 .iti-main .header-anchor .iti-anchor-icon {
   display: block;
+  width: 20px;
+  height: 20px;
 }
 
 /* bootstrap override */
