site: switch nav dropdown arrows for chevrons

--- a/site/src/layout_template.html.ejs
+++ b/site/src/layout_template.html.ejs
@@ -42,13 +42,25 @@
         <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
           <li class="nav-item dropdown col-6 col-lg-auto">
             <a
-              class="nav-link dropdown-toggle py-2 px-0 px-lg-2 <% if (pageType === 'docs') { %>active<% } %>"
+              class="nav-link dropdown-toggle d-inline-flex align-items-center gap-1 py-2 px-0 px-lg-2 <% if (pageType === 'docs') { %>active<% } %>"
               href="#"
               role="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
               Docs
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-chevron-down"
+                viewBox="0 0 16 16"
+                aria-hidden="true"
+                focusable="false"
+              >
+                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+              </svg>
             </a>
             <ul class="dropdown-menu">
               <% docsDropdownPages.forEach((p) => { %>
@@ -63,13 +75,25 @@
           </li>
           <li class="nav-item dropdown col-6 col-lg-auto">
             <a
-              class="nav-link dropdown-toggle py-2 px-0 px-lg-2 <% if (pageType === 'examples') { %>active<% } %>"
+              class="nav-link dropdown-toggle d-inline-flex align-items-center gap-1 py-2 px-0 px-lg-2 <% if (pageType === 'examples') { %>active<% } %>"
               href="#"
               role="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
               Examples
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-chevron-down"
+                viewBox="0 0 16 16"
+                aria-hidden="true"
+                focusable="false"
+              >
+                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
+              </svg>
             </a>
             <ul class="dropdown-menu">
               <% examplesDropdownPages.forEach((p) => { %>
