--- a/site/src/css/website.css
+++ b/site/src/css/website.css
@@ -47,6 +47,23 @@ p img {
   border: 0;
 }
 
+/* Header dropdown toggle: replace Bootstrap caret triangle with inline icon */
+.iti-navbar .dropdown-toggle::after {
+  display: none;
+}
+
+.iti-navbar .bi-chevron-down {
+  width: 12px;
+  height: 12px;
+  margin-top: 1px;
+  margin-left: 2px;
+}
+
+.iti-navbar .bi-chevron-down path {
+  stroke: currentColor;
+  stroke-width: 1;
+}
+
 /* LAYOUT */
 .iti-gutter {
   --bs-gutter-x: 3rem;
