--- a/site/src/layout_template.html.ejs
+++ b/site/src/layout_template.html.ejs
@@ -153,7 +153,7 @@
         <li class="nav-item">
           <button
             type="button"
-            class="nav-link iti-mobile-nav-toggle text-start w-100 d-flex align-items-center justify-content-between"
+            class="nav-link iti-mobile-nav-toggle text-start w-100 d-flex align-items-center"
             data-bs-toggle="collapse"
             data-bs-target="#itiMobileDocsMenu"
             aria-controls="itiMobileDocsMenu"
@@ -173,9 +173,11 @@
               >
                 <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783" />
               </svg>
-              Docs
+              <span class="d-inline-flex align-items-center gap-1">
+                Docs
+                <span class="iti-mobile-nav-toggle__chevron" aria-hidden="true"></span>
+              </span>
             </span>
-            <span class="iti-mobile-nav-toggle__chevron" aria-hidden="true"></span>
           </button>
           <ul
             class="iti-mobile-submenu collapse nav flex-column flex-nowrap nav-pills ms-3 mt-2 <% if (pageType === 'docs') { %>show<% } %>"
@@ -213,7 +215,7 @@
         <li class="nav-item">
           <button
             type="button"
-            class="nav-link iti-mobile-nav-toggle text-start w-100 d-flex align-items-center justify-content-between"
+            class="nav-link iti-mobile-nav-toggle text-start w-100 d-flex align-items-center"
             data-bs-toggle="collapse"
             data-bs-target="#itiMobileExamplesMenu"
             aria-controls="itiMobileExamplesMenu"
@@ -234,9 +236,11 @@
                 <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
                 <path d="M6.854 4.646a.5.5 0 0 1 0 .708L4.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0m2.292 0a.5.5 0 0 0 0 .708L11.793 8l-2.647 2.646a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708 0" />
               </svg>
-              Examples
+              <span class="d-inline-flex align-items-center gap-1">
+                Examples
+                <span class="iti-mobile-nav-toggle__chevron" aria-hidden="true"></span>
+              </span>
             </span>
-            <span class="iti-mobile-nav-toggle__chevron" aria-hidden="true"></span>
           </button>
           <ul
             class="iti-mobile-submenu collapse nav flex-column flex-nowrap nav-pills ms-3 mt-2 <% if (pageType === 'examples') { %>show<% } %>"
